--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "author": "Alexander Johansson",
-  "name": "brunch-stylus-jade-coffee",
-  "description": "Minimal brunch template with stylus, jade & coffeee.",
+  "name": "brunch-stylus-handlebars-coffee",
+  "description": "Minimal brunch template with stylus, handlebars & coffeee.",
   "version": "1.2.0",
   "homepage": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/KATT/brunch-jade-stylus-coffee"
+    "url": "https://github.com/KATT/brunch-handlebars-stylus-coffee"
   },
   "engines": {
     "node": "~0.6.10 || 0.8 || 0.9"
@@ -16,12 +16,11 @@
     "test": "brunch test"
   },
   "dependencies": {
-    "jade-brunch": "~1.5.1",
     "javascript-brunch": ">= 1.0 < 1.8",
     "coffee-script-brunch": "~1.7.3",
     "css-brunch": "~1.7.0",
     "stylus-brunch": "~1.7.0",
-    "static-jade-brunch": "~1.7.0",
+    "static-handlebars-brunch": "~0.1.5",
     "uglify-js-brunch": "~1.7.6",
     "clean-css-brunch": "~1.7.1",
     "auto-reload-brunch": "~1.7.1"
